--- a/config.yaml
+++ b/config.yaml
@@ -8,8 +8,8 @@ roboflow:
     drawer:
       endpoint: "trayfinder-labels" # obj detection, finds trays in drawers
       version: 17
-      confidence: 50
-      overlap: 50
+      confidence: 50 # adjustable, set from 1-99
+      overlap: 50 # adjustable, set from 1-99
     tray:
       endpoint: "bugfinder-kdn9e" # obj detection, finds specimens in trays
       version: 9
@@ -33,6 +33,7 @@ processing:
   process_metadata: false  # Set true if FMNH-style metadata is present
   transcribe_barcodes: true  # Set to false if no barcodes
   transcribe_taxonomy: true  # Set to false if no taxonomic IDs
+  transcribe_specimen_labels: true  # Set to false to skip specimen label transcription
 
 directories:
   fullsize: "drawers/fullsize"
