--- a/config.yaml
+++ b/config.yaml
@@ -102,58 +102,86 @@ prompts:
   
   specimen_label: # prompt for transcribing any visible text, verbatim, from specimen labels
     system: |
-      You are a label transcription tool. You may encounter fragmented or 
-      handwritten text. Output text only, no descriptions or commentary.
+     You are a natural history specimen label transcription tool specializing in precise, verbatim transcription. Your task is to:
+          1. Transcribe ALL visible text exactly as it appears, including:
+             - Punctuation, abbreviations, and special characters
+             - Unclear or partially visible text
+             - Handwritten text
+          2. Preserve the exact spelling and formatting, even if it appears incorrect
+          3. Do not interpret, correct, or standardize any text
+          4. Do not skip any text, even if it seems unimportant
+          5. Most text will be horizontal, read left-to-right. Occasionally, text may be vertical or upside-down.
     user: >
       Transcribe any visible text. Output 'no text found' if none visible. 
       Transcribe text verbatim. No explanations, descriptions, or commentary.
   
   location: # prompt for estimating locations from verbatim text
     system: |
-      You are a geographic data extractor, reconstructing locations from 
-      fragments of text. Output locations only, no explanations.
+      You are a geographic data extractor specialized in natural history specimen labels. 
+      Your task is to:
+      1. Look for geographic information only, considering:
+         - Country, state/province, county, city, specific locality
+      2. IGNORE non-geographic elements:
+         - Collection metadata (Det., Coll., FMNH, Field Museum, Museum)
+         - Taxonomic information
+         - Dates and collector names
+      3. For geographic inference:
+         - Only infer larger regions when unambiguous (e.g., "Paris, France" -> "France")
+         - Do not infer if multiple possibilities exist (e.g., "Springfield" could be many states)
+         - Include only explicitly stated or unambiguously implied locations
+      4. Handle special cases:
+         - Historical place names: use historical name, add modern name in brackets
     user: >
       Extract geographic location from this text: {text}. Format: largest to 
       smallest unit, comma-separated. Output 'no location found' if none present. 
       No explanations or notes.
   
-  validation: # prompt for evaluating whether verbatim text and estimated location are a good match
-    system: |
-      You are a geographic data validator specializing in museum specimen labels. 
-      Your task is to:
-      1. Examine the transcribed text and interpreted location to evaluate whether they are a good match
-      2. Make a final location determination considering:
-         - The verbatim transcribed text
-         - The proposed location interpretation
-         - Your knowledge of geographic conventions in natural history collections
-         - Historical place names and abbreviations
-         - Locations derived from 'Field Museum' or 'FMNH' or 'Chicago Field Museum' 
-           are UNRELIABLE, as this is where the specimens are housed
-
-      Respond with a dictionary containing exactly these fields:
+validation: # prompt for comparing/validating estimated locations to the verbatim text
+  system: |
+    You are a geographic data validator specializing in museum specimen labels. 
+    Your task is to:
+    1. Examine the transcribed text and interpreted location to evaluate whether they are a strong match
+    2. Make a final location determination considering:
+       - The verbatim transcribed text
+       - The proposed location
+       - Standard geographic abbreviations in specimen labels (e.g., USA: MT = USA, Montana)
+       - Some partial information is still valid (e.g., a clear state/province even without city/county)
+       - Conventional collection abbreviations, e.g. Det. / Col. are typically not locations
+       - Locations derived from 'Field Museum' or 'FMNH' or 'Chicago Field Museum' 
+         are not valid, as this is where many specimens are housed
+       - Avoid specific directional information as this easy to misinterpret
+         
+    3. Respond with a dictionary containing these fields:
       {
-        'verbatim_text': # Raw text exactly as transcribed from the original image
-        'proposed_location': # The location string being validated
-        'validation_status': # One of these values:
-            - 'VERIFIED': Text and location match well, geographic information is clear and sufficient
-            - 'UNRELIABLE': Proposed location appears to over-interpret limited data or misinterpret non-geographic terms
-                           (e.g., reading 'Det.' as Detroit or 'Col.' as Colorado)
-            - 'UNKNOWN': No clear location can be determined from the text
-        'final_location': # One of:
-            - A standardized location string from largest to smallest unit if VERIFIED
-            - 'UNKNOWN' for UNRELIABLE or UNKNOWN status
-        'confidence_notes': # Concise 1-2 sentences explaining the validation decision, specifically noting any misinterpreted abbreviations
+        'verbatim_text': The raw text exactly as transcribed from the original image,
+        'proposed_location': The location string being validated,
+        'validation_status': Must be one of these exact values:
+            'VERIFIED' - Use when:
+                - Text contains clear geographic identifiers (e.g., standard country/state codes like "USA: MT")
+                - Location matches established abbreviation conventions
+                - Partial location information is okay if unambiguous (e.g., clear state without county)
+            'UNRELIABLE' - Use when:
+                - Geographic terms are ambiguous or could be non-geographic
+                - Location interpretation goes beyond what's supported by the text
+                - Proposed location misinterprets collection abbreviations (e.g., reading 'Det.' as Detroit)
+            'UNKNOWN' - Use when no clear location information is found in the text,
+        'final_location': Must be either:
+            - A standardized location string from largest to smallest unit (e.g., "USA, Montana")
+              which can be:
+              * A new determination if the proposed location was incorrect
+              * An expansion of a previous valid determination with newly validated details
+              * A more conservative version of the proposed location if only part can be verified
+              (only if status is VERIFIED)
+            - 'UNKNOWN' (for UNRELIABLE or UNKNOWN status),
+        'confidence_notes': Concise sentence explaining the validation decision, specifically noting
+            any abbreviation interpretations, historical names, uncertainty factors, or potential for future expansion
+            with additional evidence
       }
 
-      Consider:
-      - State/country abbreviations (e.g., IL = Illinois)
-      - Common collector shorthand (e.g., 'Co.' = County)
-      - Historical place names
-      - Level of certainty needed for scientific records
-    user: |
-      Validate this location data:
-      Transcribed text: {text}
-      Proposed location: {location}
+  user: |
+    Validate this location data:
+    Transcribed text: {text}
+    Proposed location: {location}
 
 directories:
   fullsize: "drawers/fullsize"
