add version numbers for key packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pandas
-numpy
-Pillow
-opencv-python-headless
-matplotlib
-roboflow
-anthropic
-aiofiles
-pyyaml
+pandas==2.2.3
+numpy==2.2.4
+Pillow==11.1.0
+opencv-python-headless==4.10.0.84
+matplotlib==3.10.1
+roboflow==1.1.53
+anthropic==0.49.0
+aiofiles==24.1.0
+PyYAML==6.0.2
